fix to have the same behavior like go impl